--- a/style.css
+++ b/style.css
@@ -225,9 +225,16 @@ html {
 .arrow {
     width: 72px;
     height: 72px;
-    margin-top: 30px;
+    margin-top: 12px;
     font-size: 60px;
 }
+
+@media screen and (max-device-width: 480px) {
+    footer {
+        height: 15vh;
+    }
+}
+
 
 /*
 .up {
